# azure

azure/: CMakeLists.txt  main.cpp
azure_cloud/: CMakeLists.txt  main.cpp
